[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pngs/enemies/profe_1.png" type="Texture" id=1]
[ext_resource path="res://levels/level_escuela/enemies/enemy_esc.gd" type="Script" id=2]
[ext_resource path="res://levels/level_escuela/assets/pngs/se√±al_alerta.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 144.222

[node name="enemy_esc" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0644197, -11.478 )
scale = Vector2( 0.0848901, 0.0738426 )
texture = ExtResource( 1 )

[node name="searchTimer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[node name="view" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="view"]
shape = SubResource( 2 )

[node name="switchWander" type="Timer" parent="."]
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 150 )

[node name="senial_alerta" type="Sprite" parent="."]
visible = false
position = Vector2( -1.75, -49.5 )
scale = Vector2( 0.191011, 0.204082 )
texture = ExtResource( 3 )

[connection signal="timeout" from="searchTimer" to="." method="_on_searchTimer_timeout"]
[connection signal="body_entered" from="view" to="." method="_on_view_body_entered"]
[connection signal="timeout" from="switchWander" to="." method="_on_switchWander_timeout"]
